[gd_scene load_steps=8 format=3 uid="uid://rh5y7h5aa8dn"]

[ext_resource type="Script" path="res://TicTacTo/BoardScene/BoardBehaviour.gd" id="1_1rwpk"]
[ext_resource type="AudioStream" uid="uid://cnyorqas0f5um" path="res://TicTacTo/assets/Click (12).wav" id="2_v3kkk"]
[ext_resource type="AudioStream" uid="uid://cgovbm3gsjf5q" path="res://TicTacTo/assets/Click (13).wav" id="3_h83fw"]
[ext_resource type="AudioStream" uid="uid://bq1dsxbmwuayl" path="res://TicTacTo/assets/Special (2).wav" id="4_k541h"]
[ext_resource type="AudioStream" uid="uid://do7lqe2xh552t" path="res://TicTacTo/assets/Special (9).wav" id="5_t25x4"]

[sub_resource type="LabelSettings" id="LabelSettings_v2lun"]
font_size = 32

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1vad5"]
streams_count = 2
stream_0/stream = ExtResource("2_v3kkk")
stream_1/stream = ExtResource("3_h83fw")

[node name="BoardScene" type="Node2D"]
script = ExtResource("1_1rwpk")
board_pos_offset_x = 50
grid_pos_offset_x = 94
grid_pos_offset_y = 94

[node name="CanvasGroup" type="CanvasGroup" parent="."]
position = Vector2(0, 100)

[node name="ProgressLabel" type="Label" parent="."]
offset_right = 399.0
offset_bottom = 62.0
label_settings = SubResource("LabelSettings_v2lun")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Button" type="Button" parent="."]
offset_left = 152.0
offset_top = 63.0
offset_right = 245.0
offset_bottom = 101.0
text = "New Game"

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_k541h")

[node name="DrawSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_t25x4")

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_1vad5")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
